--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -1,6 +1,6 @@
 .container__form {
 
-    background-image: linear-gradient(#1903035f), url(../imagenes/footer.jpg) !important;
+    background-image: linear-gradient(#1903035f), url(/imagenes/footer.jpg) !important ;
     height: 526px;
     width: 100%;
     background-size: cover;
